resized images smaller

--- a/about.html
+++ b/about.html
@@ -36,9 +36,9 @@
             </div>
             <div class="category-1-images">
               <div class="container-1-imgs">
-                <img src="images/pexels-lara-jameson-9363142.jpg" alt="photo of a man">
-                <img src="images/pexels-lara-jameson-9363183.jpg" alt="photo of a man">
-                <img src="images/pexels-lara-jameson-9363192.jpg" alt="photo of a man">
+                <img src="images/about me image 1.png" alt="photo of a man">
+                <img src="images/about me image 2.png" alt="photo of a man">
+                <img src="images/about me image 3.png" alt="photo of a man">
               </div>
             </div>
           </div>
