finished up the about me page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section class="header-text">
       <p>Fullstack Developer</p>
       <h1>Hi, I'm Xavier Barrett</h1>
-      <p style="font-size: 20px;">Welcome, enjoy thanks for taking a look!</p>
+      <p style="font-size: 20px;">Welcome, enjoy, thanks for taking a look!</p>
     </section>
       
     </div>
