added photos to portfolio and updated portfolio page with header and text

--- a/about.html
+++ b/about.html
@@ -4,9 +4,6 @@
     <link rel="stylesheet" href="styles.css">
   </head>
 
-
-
-
 <body>
 
   <div id="header-about">
@@ -25,7 +22,7 @@
       <div class="about-me">
         <div class="container-about-me">
           <div class="category-1">
-            <h1 style="font-size: 125px; font-family: Arial, Helvetica, sans-serif;">01</h1>
+            <h1 style="font-size: 125px; font-family: Arial, Helvetica, sans-serif; color: #44a3f1;">01</h1>
           </div>
 
           <div class="category-1-header">
@@ -36,9 +33,9 @@
             </div>
             <div class="category-1-images">
               <div class="container-1-imgs">
-                <img src="images/about me image 1.png" alt="photo of a man">
-                <img src="images/about me image 2.png" alt="photo of a man">
-                <img src="images/about me image 3.png" alt="photo of a man">
+                <img src="images/about me image 1.png" alt="photo of a man looking into camera">
+                <img src="images/about me image 2.png" alt="photo of a man looking to the left">
+                <img src="images/about me image 3.png" alt="photo of a man looking to the right">
               </div>
             </div>
           </div>
@@ -48,7 +45,7 @@
       <div class="about-me">
         <div class="container-about-me">
           <div class="category-2">
-            <h1 style="font-size: 125px; font-family: Arial, Helvetica, sans-serif;">02</h1>
+            <h1 style="font-size: 125px; font-family: Arial, Helvetica, sans-serif; color: #44a3f1;">02</h1>
           </div>
 
           <div class="category-2-header">
@@ -60,25 +57,18 @@
             </div>
             <div class="category-2-images">
               <div class="container-2-imgs">
-                <img src="images/interest image 2.png" alt="photo of a man">
-                <img src="images/interest image 1.png" alt="photo of a man">
+                <img src="images/interest image 2.png" alt="photo of a a basketball goal">
+                <img src="images/interest image 1.png" alt="photo of a car">
               </div>
             </div>
           </div>
         </div>
       </div>
 
-
-
-      
     </div>
   </div>
 
-
- 
-
 </body>
-
 </html>
 
 
