--- a/contact.html
+++ b/contact.html
@@ -19,10 +19,10 @@
         </ul>
       </nav>
 
-    <section class="header-text">
-      <p>Fullstack Developer</p>
-      <h1>Hi, I'm Xavier Barrett</h1>
-      <p style="font-size: 20px;">Welcome, enjoy, thanks for taking a look!</p>
+    <section class="header-text-contact">
+      <p>Here's how to</p>
+      <h1>CONTACT ME</h1>
+      <p style="font-size: 20px;">barrettxavier@yahoo.com</p>
     </section>
       
     </div>
