changed color of contact me text

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 
     <section class="header-text-contact">
       <p>Here's how to</p>
-      <h1>CONTACT ME</h1>
+      <h1 style="color: #ff3366;">CONTACT ME</h1>
       <p style="font-size: 20px;">barrettxavier@yahoo.com</p>
     </section>
       
